; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_sound_falcon.c_Setbuffer.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_sound_falcon.c_Setbuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DMActrlptr = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Setbuffer(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = add nsw i64 %6, %7
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %3, align 8
  %10 = ashr i64 %9, 16
  %11 = and i64 %10, 255
  %12 = load i64*, i64** @DMActrlptr, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 1
  store i64 %11, i64* %13, align 8
  %14 = load i64, i64* %3, align 8
  %15 = ashr i64 %14, 8
  %16 = and i64 %15, 255
  %17 = load i64*, i64** @DMActrlptr, align 8
  %18 = getelementptr inbounds i64, i64* %17, i64 2
  store i64 %16, i64* %18, align 8
  %19 = load i64, i64* %3, align 8
  %20 = and i64 %19, 255
  %21 = load i64*, i64** @DMActrlptr, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 3
  store i64 %20, i64* %22, align 8
  %23 = load i64, i64* %5, align 8
  %24 = ashr i64 %23, 16
  %25 = and i64 %24, 255
  %26 = load i64*, i64** @DMActrlptr, align 8
  %27 = getelementptr inbounds i64, i64* %26, i64 7
  store i64 %25, i64* %27, align 8
  %28 = load i64, i64* %5, align 8
  %29 = ashr i64 %28, 8
  %30 = and i64 %29, 255
  %31 = load i64*, i64** @DMActrlptr, align 8
  %32 = getelementptr inbounds i64, i64* %31, i64 8
  store i64 %30, i64* %32, align 8
  %33 = load i64, i64* %5, align 8
  %34 = and i64 %33, 255
  %35 = load i64*, i64** @DMActrlptr, align 8
  %36 = getelementptr inbounds i64, i64* %35, i64 9
  store i64 %34, i64* %36, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
